# recipe-ai

./: .eslintrc.cjs  .gitignore  .lintstagedrc.json  AGENTS.md  README.md  mcp.json.example  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  recipe-monorepo.code-workspace  tailwind.config.cjs  vitest.config.ts
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: ci.yml
.husky/: pre-commit
.husky/_/: husky.sh
backend/: Dockerfile  pyproject.toml  ruff.toml
frontend/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
recipe-ai/: package.json
